# fastapi-template

./: .env.example  .gitignore  pyproject.toml
